--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="card" style="width: 7rem;">
           <img class="card-img-top" src="https://picsum.photos/250/250?random=7" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">playstation111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111</h5>
+            <h5 class="card-title">categories</h5>
           </div>
         </div>
       </div>
@@ -132,7 +132,7 @@
         <div class="card" style="width: 7rem;">
           <img class="card-img-top" src="https://picsum.photos/250/250?random=7" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">playstation</h5>
+            <h5 class="card-title">categories</h5>
           </div>
         </div>
       </div>
@@ -142,7 +142,7 @@
         <div class="card" style="width: 7rem;">
           <img class="card-img-top" src="https://picsum.photos/250/250?random=7" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">playstation</h5>
+            <h5 class="card-title">categories</h5>
           </div>
         </div>
       </div>
@@ -153,7 +153,7 @@
         <div class="card" style="width: 7rem;">
           <img class="card-img-top" src="https://picsum.photos/250/250?random=7" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">playstation</h5>
+            <h5 class="card-title">categories</h5>
           </div>
         </div>
       </div>
@@ -165,7 +165,7 @@
         <div class="card" style="width: 7rem;">
           <img class="card-img-top" src="https://picsum.photos/250/250?random=8" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">playstation</h5>
+            <h5 class="card-title">categories</h5>
           </div>
         </div>
       </div>
@@ -176,7 +176,7 @@
         <div class="card" style="width: 7rem;">
           <img class="card-img-top" src="https://picsum.photos/250/250?random=9" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">playstation</h5>
+            <h5 class="card-title">categories</h5>
           </div>
         </div>
       </div>
